--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   location: ^3.2.4
   custom_switch: ^0.0.1
   table_calendar: ^2.3.3
+  provider: ^4.3.3
 
 dev_dependencies:
   build_runner: ^1.0.0
