--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   custom_switch: ^0.0.1
   table_calendar: ^2.3.3
   provider: ^4.3.3
+  image_picker: ^0.6.3+4
+  dropdownfield: ^1.0.3
 
 dev_dependencies:
   build_runner: ^1.0.0
