--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_core: ^0.7.0
   timer_count_down: ^1.0.4+1
   url_launcher: ^5.7.10
+  carousel_pro: ^0.0.13
   geocoder: ^0.2.1
   location: ^3.2.4
   custom_switch: ^0.0.1
@@ -53,6 +54,7 @@ dependencies:
   provider: ^4.3.3
   image_picker: ^0.6.3+4
   dropdownfield: ^1.0.3
+  geolocator: ^6.2.1
 
 dev_dependencies:
   build_runner: ^1.0.0
