--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   jiffy: ^3.0.1
   google_sign_in: ^4.5.9
   firebase_auth: any
-  firebase_core: ^0.7.0
+  firebase_core: ^0.5.0
   timer_count_down: ^1.0.4+1
   url_launcher: ^5.7.10
   carousel_pro: ^0.0.13
@@ -55,6 +55,9 @@ dependencies:
   image_picker: ^0.6.3+4
   dropdownfield: ^1.0.3
   geolocator: ^6.2.1
+
+  firebase_messaging: ^7.0.3
+  flutter_local_notifications: ^3.0.1+7
 
 dev_dependencies:
   build_runner: ^1.0.0
